--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,5 @@
-#Fri Sep 19 08:39:51 CEST 2008
+#Sat Apr 18 17:29:21 CEST 2009
 eclipse.preferences.version=1
 formatter_profile=_gnu
 formatter_settings_version=11
+org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?><templates/>
