--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: php-java-bridge
 Section: web
 Priority: optional
 Maintainer: Andre Felipe Machado <andremachado@techforce.com.br>
-Build-Depends:  debhelper (>= 5), libncurses5-dev (>= 5.5-2 ), libselinux1-dev (>= 1.30-1 ), libsepol1-dev (>= 1.12.24-1 ), php5-dev (>= 5.1.0 ) , automake (>= 1.6.3 ) | automake1.7 | automake1.8 | automake1.9, sun-java6-jdk (>= 1 ),  locales (>= 2.3.6.ds1-4 ),  gcc (>= 3.2 ),  make (>= 1 ), liblucene-java, libitext-java, dpatch, libtomcat5.5-java
-Standards-Version: 3.7.2
+Build-Depends:  debhelper (>= 5), libncurses5-dev (>= 5.5-2 ), libselinux1-dev (>= 1.30 ), libsepol1-dev (>= 1.12.24 ), php5-dev (>= 5.1.0 ) , automake (>= 1.6.3 ) | automake1.7 | automake1.8 | automake1.9, sun-java6-jdk (>= 1 ),  locales (>= 2.3.6.ds1-4 ),  gcc (>= 3.2 ),  make (>= 1 ), liblucene-java, libitext-java, dpatch, libtomcat5.5-java
+Standards-Version: 3.8.0
 XBS-Homepage: http://php-java-bridge.sourceforge.net
 
 
@@ -83,7 +83,7 @@ Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm
 Package: php-java-bridge-j2ee-selinux
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java6-jre, tomcat5.5, liblucene-java, libitext-java, php-java-bridge-j2ee
-Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm
+Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm security
  The PHP/Java Bridge is an optimized, XML-based network 
  protocol which can be used to connect a native script 
  engine with a Java or ECMA 335 virtual machine. 
@@ -101,7 +101,7 @@ Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm
 Package: php-java-bridge-selinux
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}, sun-java6-jre, tomcat5.5, liblucene-java, libitext-java, php-java-bridge
-Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm
+Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm security.
  The PHP/Java Bridge is an optimized, XML-based network 
  protocol which can be used to connect a native script 
  engine with a Java or ECMA 335 virtual machine. 
