--- a/debian/control
+++ b/debian/control
@@ -103,7 +103,7 @@ Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm se
 Package: php-java-bridge-selinux
 Architecture: all
 Depends:  sun-java6-jre, tomcat5.5, liblucene-java, libitext-java, php-java-bridge
-Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm security.
+Description: XML-based net connection protocol between PHP-Java / ECMA 335 vm security
  The PHP/Java Bridge is an optimized, XML-based network 
  protocol which can be used to connect a native script 
  engine with a Java or ECMA 335 virtual machine. 
