--- a/java.ini
+++ b/java.ini
@@ -38,3 +38,17 @@ extension = java.so
 ;; The default level is 2 (servlet) or 3 (standalone).
 
 ; java.log_level  = 3
+
+;; Whether or not the bridge should use persistent connections to the
+;; servlet. Not all servlet engines have a thread pool (see servlets
+;; maxThreads setting) which is larger than the Apache or IIS script
+;; engine pool (see Apaches maxChilds setting). Furthermore, due to a
+;; bug in some tomcat versions, persistent connections cannot be used
+;; if the Transfer-Encoding: chunked is used; tomcat 6.0.14 sends back
+;; a valid body without Content-Length and Transfer-Encoding: chunked
+;; if it wants to close a persistent chunked connection via
+;; Connection: close (see tomcats connectionTimeout setting).  The
+;; default is to use persistent servlet connections. If in doubt,
+;; switch this to Off.
+
+java.persistent_servlet_connections = On
