--- a/server/WEB-INF/web.xml
+++ b/server/WEB-INF/web.xml
@@ -6,11 +6,6 @@
     <!-- support for JEE cluster -->
     <distributable/>
     
-    <!-- Attach the JSR223 script factory to the servlet context -->
-    <listener>
-        <listener-class>php.java.servlet.ContextLoaderListener</listener-class>
-    </listener>
-
     <!-- Handle PHP urls which cannot be expressed using a standard
 	 servlet spec 2.2 url-pattern, e.g.: *.php/delete/from?what=that 
          You may remove this and the filter-mapping below -->
@@ -18,6 +13,16 @@
         <filter-name>PhpCGIFilter</filter-name>
         <filter-class>php.java.servlet.PhpCGIFilter</filter-class>
     </filter>
+    <filter-mapping>
+        <filter-name>PhpCGIFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+    <!-- Attach the JSR223 script factory to the servlet context -->
+    <listener>
+        <listener-class>php.java.servlet.ContextLoaderListener</listener-class>
+    </listener>
 
     <!-- PHP Servlet: back-end for Apache or IIS -->
     <servlet>
@@ -29,8 +34,8 @@
 
     <!-- PHP CGI servlet: when IIS or Apache are not available -->
     <servlet>
-        <servlet-name>PhpCGIServlet</servlet-name>
-        <servlet-class>php.java.servlet.PhpCGIServlet</servlet-class>
+        <servlet-name>PhpFastCGIServlet</servlet-name>
+        <servlet-class>php.java.servlet.fastcgi.FastCGIServlet</servlet-class>
 
          <!-- Your php binary. Default is /usr/bin/php-cgi or -->
          <!-- c:/Program Files/PHP/php-cgi.exe -->
@@ -77,15 +82,9 @@
 
     <!-- PHP CGI Servlet Mapping -->
     <servlet-mapping>
-        <servlet-name>PhpCGIServlet</servlet-name>
+        <servlet-name>PhpFastCGIServlet</servlet-name>
         <url-pattern>*.php</url-pattern>
     </servlet-mapping>
-
-   <!-- PHP CGI Filter Mapping -->
-    <filter-mapping>
-        <filter-name>PhpCGIFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
 
     <!-- Welcome files -->
     <welcome-file-list>
